<resources>
    <string name="app_name">Tech Inventory</string>
    <string name="empty_view_title_text">The inventory is empty!</string>
    <string name="empty_view_subtitle_text">Add products by clicking the red button below</string>
    <string name="units">units</string>
    <string name="quantity">Quantity (units)</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price ($)</string>
    <string name="dollars">$</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_insert_product_failed">Product not saved</string>
    <string name="editor_insert_product_successful">Product is saved.</string>
    <string name="editor_update_product_failed">Product not updated</string>
    <string name="editor_update_product_successful">Product has been updated.</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="unsaved_changes_dialog_msg">Discard changes and quit editing ?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_failed">Error while deleting product</string>
    <string name="editor_delete_product_successful">Product Deleted</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete all Products</string>
    <string name="required">This field cannot be blank</string>
    <string name="edit_quantity">Edit Quantity</string>
    <string name="negative">Negative value not allowed</string>
    <string name="product_details">Product Details</string>
    <string name="placeholder_price">500</string>
    <string name="placeholder_quantity">300</string>
    <string name="placeholder_name">Product Name</string>
    <string name="Increment_by_one">+1</string>
    <string name="Decrement_by_one">-1</string>
    <string name="supplier_placeholder">Supplier Name</string>
    <string name="supplier_number_placeholder">1800 000 0000</string>
    <string name="call_supplier_label">Call Supplier</string>
    <string name="edit_product_label">Edit Product</string>
    <string name="delete_product_label">Delete Product</string>
    <string name="quantity_label_prefix">Quantity: </string>
    <string name="sale_label">SALE</string>
    <string name="price_label_prefix">Price: $</string>
</resources>
