<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_name" />

        <!-- Name field -->
        <TextView
            android:id="@+id/product_name"
            style="@style/DetailStyle"
            android:text="@string/placeholder_name" />

    </LinearLayout>


    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/price" />

        <!-- Name field -->
        <TextView
            android:id="@+id/product_price"
            style="@style/DetailStyle"
            android:text="@string/placeholder_price" />

    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/quantity" />

        <!-- Name field -->
        <TextView
            android:id="@+id/product_quantity"
            style="@style/DetailStyle"
            android:text="@string/placeholder_quantity" />

    </LinearLayout>

    <!-- Quantity Editor  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/edit_quantity" />

        <Button
            android:id="@+id/increase_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Increment_by_one"
            android:textSize="16sp" />

        <Button
            android:id="@+id/decrease_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Decrement_by_one"
            android:textSize="16sp" />


    </LinearLayout>


    <!-- Supplier Name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_name" />

        <!-- Name field -->
        <TextView
            android:id="@+id/supplier_name"
            style="@style/DetailStyle"
            android:text="@string/supplier_placeholder" />

    </LinearLayout>

    <!-- Supplier Phone category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_phone" />

        <!-- Name field -->
        <TextView
            android:id="@+id/supplier_phone"
            style="@style/DetailStyle"
            android:text="@string/supplier_number_placeholder" />

    </LinearLayout>

    <!--Call Supplier-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/call_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/call_supplier_label" />
    </LinearLayout>

    <!--Edit Product-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/edit_product_label" />
    </LinearLayout>


    <!--Delete Product-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/delete_product_label" />
    </LinearLayout>


</LinearLayout>
